--- a/instances/mactainer.yml
+++ b/instances/mactainer.yml
@@ -3,7 +3,11 @@ kernel:
   image: linuxkit/kernel:5.10.47
   cmdline: "earlyprintk=serial page_poison=1 vsyscall=emulate panic=1 nospec_store_bypass_disable noibrs noibpb no_stf_barrier mitigations=off console=ttyS0 console=ttyS1"
 init:
-  - linuxkit/vpnkit-expose-port:b0a5ede4c53aa718b48fb9a86e4725ab6ae7f96e # install vpnkit-expose-port and vpnkit-iptables-wrapper on host
+  - quay.io/densityops/vpnkit-expose-port:16ed722e  # install vpnkit-expose-port and vpnkit-iptables-wrapper on host
+  - quay.io/densityops/vpnkit-forwarder:16ed722e
+  # vpnkit sockets
+  #- quay.io/densityops/vpnkit-9pmount-vsock:16ed722e 
+  #- quay.io/densityops/vpnkit-tap-vsockd:16ed722e
   - linuxkit/init:78fb57c7da07c4e43c3a37b27755581da087a3b6
   - linuxkit/runc:bf1e0c61fb4678d6428d0aabbd80db5ea24e4d4d
   - linuxkit/containerd:cc02c2af9c928c2faeccbe4edc78bd297ad91866
@@ -90,29 +94,15 @@ services:
   # Enable acpi to shutdown on power events
   - name: acpid
     image: linuxkit/acpid:d2ddd88c7918466f875e7c5c3e527b51dfb0b0ea
-  # Enable getty for easier debugging
-  #- name: getty
-  #  image: linuxkit/getty:ed32c71531f5998aa510847bb07bd847492d4101
-  #  env:
-  #      - INSECURE=true
-  # Run ntpd to keep time synchronised in the VM
   - name: ntpd
     image: linuxkit/openntpd:66f25a516c7460f5e49195309cf276903741c428
   # VSOCK to unix domain socket forwarding. Forwards guest /var/run/docker.sock
   # to a socket on the host.
   - name: vsudd
-    image: linuxkit/vsudd:8b442fc9296ce581e8755675eadc928c13ac79c9
+    image: quay.io/densityops/vsudd:f8cee7d   
     binds:
         - /var/run:/var/run
     command: ["/vsudd", "-inport", "2376:unix:/var/run/guest/docker.sock"]
-  # vpnkit-forwarder forwards network traffic to/from the host via VSOCK port 62373. 
-  # It needs access to the vpnkit 9P coordination share 
-  - name: vpnkit-forwarder
-    image: linuxkit/vpnkit-forwarder:56ed525d212ca17e01b54d9b66c39b534a4392bc
-    binds:
-        - /var/vpnkit:/port
-    net: host
-    command: ["/vpnkit-forwarder", "-vsockPort", "62373"]
   # Monitor for image deletes and invoke a TRIM on the container filesystem
   - name: trim-after-delete
     image: linuxkit/trim-after-delete:ac6307a62c926a49a067d4de8667c2789b5ce2c9
@@ -128,7 +118,7 @@ services:
     image: docker:20.10.8-dind
     capabilities:
      - all
-    #net: host
+    net: host
     mounts:
      - type: bind
        source: /sys/fs/cgroup
@@ -145,11 +135,14 @@ services:
      - /var/vpnkit:/port # vpnkit control 9p mount
      - /run/config/docker:/run/config/docker
      - /run/guest:/run
+     - /run/host:/run/host
      - /run/guest:/var/run
      - /usr/bin/vpnkit-expose-port:/usr/bin/vpnkit-expose-port # userland proxy
+     - /usr/bin/vpnkit-expose-port-wrapper:/usr/bin/vpnkit-expose-port-wrapper
+     - /etc/vpnkit-expose-port.json:/etc/vpnkit-expose-port.json
      - /usr/bin/vpnkit-iptables-wrapper:/usr/bin/iptables # iptables wrapper
     command: [ "/usr/local/bin/docker-init", "/usr/local/bin/dockerd", "--",
-            "--userland-proxy-path", "/usr/bin/vpnkit-expose-port",
+            "--userland-proxy-path", "/usr/bin/vpnkit-expose-port-wrapper",
             "--config-file", "/run/config/docker/daemon.json",
             "--swarm-default-advertise-addr=eth0",
             "--storage-driver", "overlay2" ]
@@ -171,17 +164,35 @@ files:
     directory: true
     optional: false
   # create guest directories
-  - path: /etc/init.d/001-guest
+  - path: /etc/init.d/005-vpnkit-forward
     directory: false
     contents: |
       #!/bin/sh
-      mkdir -p /run/guest
+      /usr/bin/vpnkit-forwarder -debug -data-listen 3/62373 -control-listen /run/host/backend.sock &
+    optional: false
+    mode: "0755"
+  - path: /etc/init.d/001-guest-host
+    directory: false
+    contents: |
+      #!/bin/sh
+      mkdir -p /run/guest /run/host
+    optional: false
+    mode: "0755"
+  - path: /etc/vpnkit-expose-port.json
+    directory: false
+    contents: '{"control": "/run/host/backend.sock", "local-bind": "never"}'
+    optional: false
+  - path: /usr/bin/vpnkit-expose-port-wrapper
+    directory: false
+    contents: |
+      #!/bin/sh
+      /usr/bin/vpnkit-expose-port -local-bind never $@
     optional: false
     mode: "0755"
   - path: /etc/os-release
     directory: false
     contents: |
-      PRETTY_NAME="Betsson Docker Desktop"
+      PRETTY_NAME="mactainer"
     optional: false
   - path: /etc/host-hypervisor
     directory: false
@@ -190,7 +201,7 @@ files:
     optional: false
   - path: /etc/hostname
     directory: false
-    contents: betsson-docker-desktop
+    contents: mactainer
     optional: false
   - path: /etc/linuxkit.yml
     directory: false
